<resources>
    <string name="app_name">PcConfig</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="home">Home</string>
    <string name="choose_laptop">Choose Laptop</string>
    <string name="configure_desktop">Configure Desktop</string>
    <string name="button">Button</string>
    <string name="enter">Enter</string>
    <string name="choose">Choose</string>
    <string name="cse_student">CSE Student</string>
    <string name="business">Business</string>
    <string name="public_user">Public User</string>
    <string name="gaming">Gaming</string>
    <string name="reasearch">Reasearch</string>
    <string name="general_student">General Student</string>
    <string name="official">Official</string>
    <string name="select_catagories">Select Catagories</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="cpu">CPU</string>
    <string name="graphics_card">Graphics Card</string>
    <string name="monitor">Monitor</string>
    <string name="main_board">Main Board</string>
    <string name="ram">RAM</string>
    <string-array name="customize_parts">
        <item>CPU</item>
        <item>Monitor</item>
        <item>Main Board</item>
        <item>RAM</item>
        <item>Hard Disk</item>
        <item>Graphics Card</item>
        <item>Headphone</item>
        <item>Keyboard</item>
        <item>Mouse</item>
        <item>Power Supply</item>
        <item>Speaker</item>
        <item>Web Cam</item>
        <item>UPS</item>
        <item>DVD Writer</item>


    </string-array>
    <string name="title_activity_customize_select">CustomizeSelectActivity</string>
    <string name="processor">Processor</string>


</resources>

